--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/clang_complete"]
 	path = bundle/clang_complete
 	url = git@github.com:Rip-Rip/clang_complete.git
+[submodule "bundle/supertab"]
+	path = bundle/supertab
+	url = git@github.com:ervandew/supertab.git
